Add Languages Resource
